correccion de errores

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <header>
         <h1>Calculador de Promedios</h1>
     </header>
-    <p>ingrese su nota donde le indica para conocer </p>
+    <p>ingrese su nota donde le indica</p>
 </body>
 </html>
