--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Calculador de Promedios</h1>
+        <h1>Tienda de ropa</h1>
     </header>
-    <p>ingrese su nota donde le indica</p>
+    <p>Stock de productos</p>
 </body>
 </html>
