--- a/index.html
+++ b/index.html
@@ -5,12 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi primer Js</title>
-    <script src="./main.js"></script>
+    <link rel="stylesheet" href="./style.css">
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-        <h1>Tienda de ropa</h1>
-    </header>
-    <p>Stock de productos</p>
+
+  <header>
+<div class="titulo focus-in-expand">
+  <h1>Zapatillas</h1>
+</div>
+</header>
+
+<div class="carrito" >
+  <table class="tablaCarr">
+    <tr>
+       <td class="nombre">Nombre</td>
+       <td class="precio">precio</td>
+    </tr>
+  </table>
+</div>
+
+
+
+
+<div class="container">
+  <div class="contGrid ">
+  <!-- los porductos se cargan en la "api.json" -->
+  </div> 
+</div>
+
+
+
+
+
+ <script src="./main.js"></script>
+ <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
+
+
+
